{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 378,
  "lineage": "8088dbce-6f76-c923-0743-48f580133c98",
  "resources": [
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vault_lt_sg",
      "provider": "module.vault_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:585781887322:security-group/sg-0bd88b0ef86e868e6",
            "description": "Security to control network traffic to Vault Instances",
            "egress": [],
            "id": "sg-0bd88b0ef86e868e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8201
              }
            ],
            "name": "vault-dynamo-svr-SG",
            "name_prefix": "",
            "owner_id": "585781887322",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vault-dynamo-svr-SG",
              "rea-system-id": "vault-dynamo-svr"
            },
            "tags_all": {
              "Name": "vault-dynamo-svr-SG",
              "rea-system-id": "vault-dynamo-svr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6c0a488ab519e12"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_healthcheck",
      "provider": "module.vault_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2714010358",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bd88b0ef86e868e6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault_cluster.aws_security_group.vault_lt_sg"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_inbound",
      "provider": "module.vault_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-270304539",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd88b0ef86e868e6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault_cluster.aws_security_group.vault_lt_sg"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_api",
      "provider": "module.vault_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8201,
            "id": "sgrule-493348371",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd88b0ef86e868e6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8201,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault_cluster.aws_security_group.vault_lt_sg"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_inbound",
      "provider": "module.vault_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8200,
            "id": "sgrule-4282735120",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd88b0ef86e868e6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8200,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault_cluster.aws_security_group.vault_lt_sg"
          ]
        }
      ]
    },
    {
      "module": "module.vault_lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "vault_alb",
      "provider": "module.vault_lb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585781887322:loadbalancer/app/VAULT-LOAD-BALANCER/f1f25a0537cb53d3",
            "arn_suffix": "app/VAULT-LOAD-BALANCER/f1f25a0537cb53d3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "VAULT-LOAD-BALANCER-2038109456.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:585781887322:loadbalancer/app/VAULT-LOAD-BALANCER/f1f25a0537cb53d3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "VAULT-LOAD-BALANCER",
            "security_groups": [
              "sg-025d281362537dcb3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a79e54dd1a0064c"
              },
              {
                "subnet_id": "subnet-0927958e96802d4df"
              }
            ],
            "subnets": [
              "subnet-01a79e54dd1a0064c",
              "subnet-0927958e96802d4df"
            ],
            "tags": {
              "Name": "VAULT-LOADBALANCER-TST"
            },
            "tags_all": {
              "Name": "VAULT-LOADBALANCER-TST"
            },
            "vpc_id": "vpc-0c6c0a488ab519e12",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vault_lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "module.vault_lb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585781887322:listener/app/VAULT-LOAD-BALANCER/f1f25a0537cb53d3/32d63359a87a5d1e",
            "certificate_arn": "arn:aws:acm:ap-southeast-2:585781887322:certificate/2d78d1df-0d81-478a-ab98-18cdd6ee9f06",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585781887322:targetgroup/vault-lb-tg/587bb2abeeaafbdf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:585781887322:listener/app/VAULT-LOAD-BALANCER/f1f25a0537cb53d3/32d63359a87a5d1e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585781887322:loadbalancer/app/VAULT-LOAD-BALANCER/f1f25a0537cb53d3",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vault_lb.aws_lb.vault_alb",
            "module.vault_lb.aws_lb_target_group.vault_tg"
          ]
        }
      ]
    },
    {
      "module": "module.vault_lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vault_tg",
      "provider": "module.vault_lb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585781887322:targetgroup/vault-lb-tg/587bb2abeeaafbdf",
            "arn_suffix": "targetgroup/vault-lb-tg/587bb2abeeaafbdf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/v1/sys/health?standbyok=true",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:585781887322:targetgroup/vault-lb-tg/587bb2abeeaafbdf",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "vault-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c6c0a488ab519e12"
          },
          "dependencies": [
            "module.vault_lb.aws_lb.vault_alb"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}